--- a/src/main/resources/templates/login-main.html
+++ b/src/main/resources/templates/login-main.html
@@ -11,19 +11,19 @@
 </head>
 <body>
 <article class="card-body mx-auto" style="max-width: 400px;">
-    <form action="/controller?command=loginMain" method="post">
-        <label class="errorMessage">${message}</label>
+    <form th:action="@{/login}" th:method="post">
+        <label style="color: red" th:text="${session.message}"></label>
         <div class="form-group input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
             </div>
-            <input name="username" class="form-control" placeholder="Username" type="username" value="${username}">
+            <input name="username" class="form-control" placeholder="Username" type="username">
         </div>
         <div class="form-group input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
             </div>
-            <input name="password" class="form-control" placeholder="Password" type="password" value="${password}">
+            <input name="password" class="form-control" placeholder="Password" type="password">
         </div>
         <div class="form-group">
             <button style="height: 50px" type="submit" class="btn btn-primary btn-block">Login</button>
